# c-s-236

./: Automaton.h  CMakeLists.txt  Comment.h  Database.h  DatalogProgram.h  EOFAutomaton.h  Expression.h  Graph.h  Header.h  IDAutomaton.h  IllegalComment.h  IllegalString.h  Interpreter.h  Lexer.h  MatcherAutomaton.h  Node.h  Parameter.h  Parser.h  PlainParameter.h  Predicate.h  README.md  Relation.h  Rule.h  StringAutomaton.h  Token.h  Tuple.h  main.cpp  makefile
